@@ -3,24 +3,106 @@ author  = Nathan Rasmussen, Nathan Glenn <garfieldnate@gmail.com>
 license = Perl_5
 copyright_holder = Alan K. Melby
 copyright_year   = 2013
-version = 4.02
 
 [ReportPhase / Phase_Begins] 	; report on everything
 
 ; start off by bumping the version
-; [Git::NextVersion]				; use Git for making version numbers
-; first_version = 0.1.0
-; version_regexp  = ^v(.+)$
 
-; basic dist skeleton
+; find the last tag, and bump to next version via Version::Next;
+; if you need a different version number, set the V env. variable
+[Git::NextVersion]
+first_version = 0.01            ; start with this version
+version_regexp  = ^v(.+)$       ; this is the default
+
+; -- basic dist skeleton
+
 [GatherDir]                     ; we start with everything in the dist dir
 [PruneCruft]                    ; automatically prune cruft defined by RJBS
 [AutoPrereqs]                   ; automatically find our prereqs
-; [ManifestSkip]                  ; skip files that matches MANIFEST.SKIP
-; skipfile = MANIFEST.SKIP
-;content = xxxx
+[GenerateFile / MANIFEST.SKIP]  ; make our default MANIFEST.SKIP
+filename = MANIFEST.SKIP
+content =
+content = #contents of #!include_default
+content = #have to put this here until Module::Manifest understands #!include_default
+content = # Avoid version control files.
+content = \bRCS\b
+content = \bCVS\b
+content = \bSCCS\b
+content = ,v$
+content = \B\.svn\b
+content = \B\.git\b
+content = \B\.gitignore\b
+content = \b_darcs\b
+content = \B\.cvsignore$
+content =
+content = # Avoid VMS specific MakeMaker generated files
+content = \bDescrip.MMS$
+content = \bDESCRIP.MMS$
+content = \bdescrip.mms$
+content =
+content = # Avoid Makemaker generated and utility files.
+content = \bMANIFEST\.bak
+content = \bMakefile$
+content = \bblib/
+content = \bMakeMaker-\d
+content = \bpm_to_blib\.ts$
+content = \bpm_to_blib$
+content = \bblibdirs\.ts$         # 6.18 through 6.25 generated this
+content =
+content = # Avoid Module::Build generated and utility files.
+content = \bBuild$
+content = \b_build/
+content = \bBuild.bat$
+content = \bBuild.COM$
+content = \bBUILD.COM$
+content = \bbuild.com$
+content =
+content = # Avoid temp and backup files.
+content = ~$
+content = \.old$
+content = \#$
+content = \b\.#
+content = \.bak$
+content = \.tmp$
+content = \.#
+content = \.rej$
+content =
+content = # Avoid OS-specific files/dirs
+content = # Mac OSX metadata
+content = \B\.DS_Store
+content = # Mac OSX SMB mount metadata files
+content = \B\._
+content =
+content = # Avoid Devel::Cover and Devel::CoverX::Covered files.
+content = \bcover_db\b
+content = \bcovered\b
+content =
+content = # Avoid MYMETA files
+content = ^MYMETA\.
+content =
+content = #END DEFAULT MANIFEST SKIP
+content =
+content = # sublime project
+content = \.sublime-project
+content = \.sublime-workspace
+content =
+content = #Eclipse project
+content = \.includepath$
+content = \.project$
+content = \.settings/
+content =
+content = # our tarballs
+content = \.tar\.gz$
+content = ^releases/
+content = ^TODO\.txt
+content = ^docs/
+content =
+content = \b_Inline
+[ManifestSkip]                  ; don't put anything in MANIFEST.SKIP in the build
+skipfile = MANIFEST.SKIP
 
-; Generate tons of tests
+; -- Generate tons of tests
+
 [ReportVersions::Tiny]			; report module versions used during installation
 [Test::Compile]                 ; Create a t/00-compile.t file that auto-compiles every module in the dist
 fake_home = 1                   ; fakes $ENV{HOME} just in case
@@ -36,41 +118,38 @@ has_version = 1
 [MojibakeTests]					; test file encodings
 [PodCoverageTests]			; test pod coverage
 [PodSyntaxTests]				; test pod syntax
-; [Test::Portability]				; test portability of file names
+[Test::Portability]				; test portability of file names
 ; [Test::Synopsis]				; make sure the synopsis is compilable ;doesn't work with heredocs
 [Test::UnusedVars]				; find unused variables
 [Test::Pod::LinkCheck]			; find broken links
 [Test::CPAN::Changes]			; test changelog conformance to CPAN standards
 ; [Test::EOL]					; not supported on Windows
-; [Test::Kwalitee]				; not supported on Windows
+[Test::Kwalitee]				; not supported on Windows
 
-; file mungers
+; -- munge files
+
 [Prepender]                     ; automatically add lines following the shebang in modules
 copyright = 1
-; line = use strict; use warnings;
 [OurPkgVersion]					; "our $VERSION = $version" in main module
 [PodWeaver]                     ; weave our POD and add useful boilerplate
 ; config_plugin = @Apocalyptic
 ; [LocaleMsgfmt]                  ; compile .po files to .mo files in share/locale
-; locale = share/locale      
+; locale = share/locale
 
 ; update the Changelog
 [NextRelease]
 time_zone = UTC
 filename = Changes
-; format = %v%n%tReleased: %{yyyy-MM-dd HH:mm:ss VVVV}d
-; [ChangelogFromGit]              ; generate CommitLog from git history
-; tag_regexp = ^release-(.+)$
-; file_name = CommitLog
 
-; generate/process meta-information
-[ExecDir]                       ; automatically install files from scripts/ directory as executables ( if it exists )
-dir = scripts
+; -- generate/process meta-information
+
+[ExecDir]                       ; automatically install files from bin/ directory as executables ( if it exists )
+dir = bin
 [ShareDir]                      ; automatically install File::ShareDir files from share/ ( if it exists )
 dir = share
 [MinimumPerl]                   ; automatically find the minimum perl version required and add it to prereqs
-[Bugtracker]                    ; set bugtracker to http://rt.cpan.org/Public/Dist/Display.html?Name=$dist
-[Homepage]                      ; set homepage to http://search.cpan.org/dist/$dist/
+; [Bugtracker]                    ; set bugtracker to http://rt.cpan.org/Public/Dist/Display.html?Name=$dist
+; [Homepage]                      ; set homepage to http://search.cpan.org/dist/$dist/
 [MetaConfig]                    ; dump dzil config into metadata
 [MetaData::BuiltWith]           ; dump entire perl modules we used to build into metadata
 [Repository]                    ; set git repository path by looking at git configs
@@ -92,23 +171,26 @@ prefer = build
 [GithubMeta] 					; include Git info in Meta.yml
 [MetaJSON]                      ; create META.json file
 [ReadmeFromPod]                 ; create README file
-[ReadmeMarkdownFromPod] 		; for Git's README file
+[ReadmeAnyFromPod]              ; create markdown README file in the project root
+type = markdown
+location = root
 [InstallGuide]                  ; create INSTALL file
-;[Signature]                     ; not supported on Windows yet... ; create SIGNATURE file when we are releasing ( annoying to enter password during test builds... )
+; Windows: install gpg4win
+; [Signature]                     ; create SIGNATURE file whenever we create an archive
 ; sign = archive
 [Manifest]                      ; finally, create the MANIFEST file
 
 ; -- pre-release
+
 [CheckChangesHasContent]        ; make sure you explained your changes :)
 changelog = Changes
-; [Git::Check]                    ; check working path for any uncommitted stuff ( exempt Changes because it will be committed after release )
-; changelog = Changes
 [TestRelease]                   ; make sure that we won't release a FAIL distro :)
-; [ExtraTests]					; rewrite xt/ tests into t/ directory.
-[RunExtraTests]					; run the xt/ tests when dzil test is run.
-; [CheckExtraTests]   ; ensure xt/ tests pass
-[CheckPrereqsIndexed]           ; make sure that our prereqs actually exist on CPAN
 [ConfirmRelease]                ; double-check that we ACTUALLY want a release, ha!
+
+; -- test
+
+[RunExtraTests]                 ; run the xt/ tests when dzil test is run.
+[CheckPrereqsIndexed]           ; make sure that our prereqs actually exist on CPAN
 
 ; -- release
 [UploadToCPAN]                  ; upload your dist to CPAN using CPAN::Uploader
@@ -116,16 +198,30 @@ changelog = Changes
 ; -- post-release
 [ArchiveRelease]                ; archive our tarballs under releases/
 directory = releases
-; [Git::Commit]                   ; commit the dzil-generated stuff (Changelog, dist.ini)
-; changelog = Changes
-; commit_msg = New CPAN release of %N - v%v%n%n%c
-; time_zone = UTC
-; add_files_in = releases         ; add our release tarballs to the repo
-; [Git::Tag]                      ; tag our new release
-; tag_format = release-%v
-; tag_message = Tagged release-%v
-; [Git::Push]                     ; automatically push to the "origin" defined in .git/config
-; push_to = origin
+[Git::Commit]                   ; commit the dzil-generated stuff (allow_dirty means commit it)
+allow_dirty = README.mkdn
+allow_dirty = Changes
+allow_dirty = dist.ini
+allow_dirty = README.mkdn
+commit_msg = New release of %N - v%v%n%n%c
+add_files_in = releases         ; add our release tarballs to the repo
+add_files_in = .                ; add generated README.mkdn to the repo
+
+; commit released build to "build" branch
+[Git::CommitBuild]
+release_branch = build/%b
+message = Build of release v%v (%h on %b)
+
+[Git::Tag]                      ; tag our new release
+tag_format = v%v
+; branch = releases
+tag_message = Tagged release %v
+;NOTE: you'll have to tag the build manually
+
+[Git::Push]                     ; automatically push to the "origin" defined in .git/config
+push_to = origin
+;NOTE: you'll have to push the build manually
+
 [Clean]                         ; run dzil clean so we have no cruft :)
 
 [ReportPhase / Phase_Ends]
